--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -42,3 +42,4 @@ jobs:
       - name: Report
         run: |
           python ./report.py ${{ secrets.USERNAME }} ${{ secrets.PASSWORD }}
+          python ./report.py ${{ secrets.USERNAME_2 }} ${{ secrets.PASSWORD_2 }}
